add more content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       type="text/css"
       href="./public/font-awesome.min.css"
     />
-    <title>Lockscreen - Vali Admin</title>
+    <title>RustScrap Bot</title>
   </head>
   <body class="pace-done">
     <div class="pace pace-inactive">
@@ -33,72 +33,36 @@
     </section>
     <section class="lockscreen-content">
       <div class="lock-box">
-        <img class="user-image" src="./public/stripe.png" />
-        <h4 class="text-center user-name">Invoice #[N/A]</h4>
+        <img class="user-image" src="./public/icon.webp" />
+        <h4 class="text-center user-name">RustScrap Bot</h4>
         <p class="text-center text-muted">
-          This is your invoice from Simon LEFORT EIRL.
+          Quality of life software developed for automation of different gameplay processes.
         </p>
         <form
           class="unlock-form"
-          action="https://pratikborsadiya.in/vali-admin/index.html"
           data-bitwarden-watching="1"
         >
           <div class="form-group">
             <label class="control-label"
               >Pay Hub
               <p style="font-weight: 300; margin: 0">
-                Choose the fastest and easiest payment means below.
+                Choose the Membership that suits you best. 
               </p>
-              <p style="font-weight: 300; margin: 0">
-                Price shown is the one you will pay, each service fees are
-                included.
-              </p></label
-            >
+            </label>
           </div>
           <div class="form-group btn-container">
             <button
               class="btn btn-primary btn-block"
               style="margin-bottom: 10px"
-              id="credit-card"
+              id="green-card"
             >
-              <i class="fa fa-credit-card fa-lg"></i>Credit Card
-            </button>
-            <button
-              class="btn btn-primary btn-block"
-              style="margin-bottom: 10px"
-              id="bank"
-              data-toggle="popover"
-              data-placement="right"
-              title="Copy IBAN"
-              data-trigger="focus"
-              data-content="DE32 1001 1001 2620 8728 90"
-            >
-              <i class="fa fa-university fa-lg"></i>Bank transfer
-            </button>
-            <button
-              class="btn btn-primary btn-block"
-              style="margin-bottom: 10px"
-              id="fiverr"
-              data-toggle="popover"
-              data-placement="right"
-              title="Register & DM me"
-              data-trigger="focus"
-              data-content="Please send me a message at https://fiverr.com/androz2091 with your invoice ID."
-            >
-              <i class="fa fa-users fa-lg"></i>Fiverr
-            </button>
-            <button
-              class="btn btn-primary btn-block"
-              style="margin-bottom: 10px"
-              id="paypal"
-            >
-              <i class="fa fa-paypal fa-lg"></i>PayPal
+              <i class="fa fa-credit-card fa-lg"></i>Green Card Membership ($9.99/m)
             </button>
           </div>
         </form>
         <p>
-          <a href="#"
-            >Need help? Send me a message at smnlefort [at] gmail.com</a
+          <a href="https://discord.gg/rustscrapbot"
+            >Need help? Join our Discord server and ask for support</a
           >
         </p>
       </div>
